clusters/war-staging/flux-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-ingress
  namespace: flux-system
  labels:
    name:  ingress-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: weave-gitops.war.me
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: ww-gitops-weave-gitops
            port:
              number: 9001
